# datasig

./: .gitignore  README.md  accuracy.py  benchmarking.py  poc_mnist.py  profiling.py  pyproject.toml  requirements.txt  timing.py
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  tests.yml
datasig/: __init__.py  algo.py  canonical.py  config.py  dataset.py  fingerprint.py  logger.py  streaming.py  utils.py
datasig/benchmark/: __init__.py  accuracy.py  benchmark.py  logger.py  plot.py  utils.py
datasig/test/: test_arff.py  test_csv.py  test_sql.py  test_streaming.py  test_tensorflow_mnist.py  test_tfds.py  test_torch_mnist.py  utils.py
lib/: config.py  dataset.py  fingerprint.py  utils.py
lib/test/: test_torch_mnist.py
old/: poc_mnist.py
