[project]
name = "datasig"
version = "0.0.3"
requires-python = ">= 3.8"
readme = "README.md"
description = "Dataset fingerprinting library"
authors = [
    {name = "Lucas Bourtoule", email = "lucas.bourtoule@trailofbits.com"},
    {name = "Boyan Milanov", email = "boyan.milanov@trailofbits.com"},
]
license = "AGPL-3.0-only"
license-files = [
    "LICENSE*",
]
dependencies = [
    "datasketch>=1.6.5",
    "numpy>=1.24.4",
    "pillow>=10.4.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "liac-arff>=2.5.0",
    "pandas>=2.0.3",
    "plotly>=6.3.0",
    "pytest>=8.3.5",
    "requests>=2.32.4",
    "torchvision>=0.20.1",
]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.black]
line-length = 100
extend-exclude = '''^/.*/test'''

[tool.pyright]
exclude = [
    "datasig/benchmark/plot.py",
]
